yanıp sönen mesaj eklendi(flash kullanıldı)

--- a/templates/prelogin-layout.html
+++ b/templates/prelogin-layout.html
@@ -5,8 +5,19 @@
     <title>{% block title %}{% endblock %} - flaskypy</title>
 </head>
 <body>
-{% block content %}
+    <!-- Flash messages -->
+    {% with messages =get_flashed_messages(with_categories=true) %}
+        {% if messages %}
 
-{% endblock %}
+            Category: {{ messages[0][0]}}
+            {{ messages[0][1] }}
+
+        {% endif %}
+    {% endwith %}
+
+
+    {% block content %}
+
+    {% endblock %}
 </body>
 </html>
