--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <h2>Login now!</h2>
-    <p>Enter you username/password to start flaskypy</p>
+    <p>Enter you username/password to start Flaskypy</p>
 
     <form action="{{ url_for('login') }}", method="POST">
         {{ displayField(form.username, 'Username', autocomplete="off", autofocus=true) }}
