--- a/templates/login.html
+++ b/templates/login.html
@@ -1,21 +1,22 @@
-{% from 'form_helper.html' import displayField %}
-{% extends 'prelogin-layout.html' %}
+{% from 'field-macro.html' import displayField %}
+{% extends "prelogin-layout.html" %}
 
 {% block title %}Login {% endblock %}
 
 {% block content %}
     <h2>Login now!</h2>
-    <p>Enter your username/password to start flaskypy</p>
-    <form action="{{ url_for('login')}}" method="POST">
-        {{ displayField(form.username, 'Username', autocomplete="off",
-            autofocus=true)}}
-        {{ displayField(form.password, 'Password')}}
+    <p>Enter you username/password to start RChat</p>
 
-
-        <div>
-            {{ form.submit_button }}
+    <form action="{{ url_for('login') }}", method="POST">
+        {{ displayField(form.username, 'Username', autocomplete="off", autofocus=true) }}
+        {{ displayField(form.password, 'Password') }}
+        <div class="form-group">
+            <input type="submit" value="Login" class="btn btn-warning">
         </div>
-
         {{ form.csrf_token }}
     </form>
+
+    <hr>
+
+    <p>Have not registered? <a href={{url_for('index')}}>Register here</a>.</p>
 {% endblock %}
