--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
     <div class="login-box">
         <h2 class="login-text">Login now!</h2>
             <center>
-            <p>Enter you username/password to start RChat</p>
+            <p>Enter you username/password to start Flaskypy</p>
 
             <form action="{{ url_for('login') }}", method="POST">
             {{ displayField(form.username, 'Username', autocomplete="off", autofocus=true) }}
