--- a/static/styles/chat.css
+++ b/static/styles/chat.css
@@ -1,35 +1,11 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: content-box;
-}
-
-html,
-body {
-    height: 100%;
-}
-
 html {
-    font-family: 'Patrick Hand', cursive;
-    /*sağdan sola  renk açışı*/
-    font-size: 15px;
-}
-
-body {
-    display: grid;
-    place-items: center;
     background: url('../static/styles/b.jpg');
-    /*sağdan sola  renk açışı*/
+    font-family: 'Patrick Hand', cursive;
 }
 
-#chat-container {
+.wrapper {
     /*mesaj kutusu tasarım ayarları*/
     display: grid;
-    grid: /* chat conteinerın içine bölümleri ayarlama*/
-    'search-container chat-title' 71px/*arama alanı ve kişi ismi*/
-    'conversation-list chat-message-list' 1fr/*kişi listesi ve mesajlar */
-    'new-message-container chat-form' 78px/*yeni mesaj yazma ve form*/
-    /275px 1fr;
     min-width: 800px;
     max-width: 1000px;
     max-height: 800px;
@@ -39,108 +15,6 @@ body {
     /*sağdan sola  renk açışı*/
     border-radius: 20px;
     opacity: 90%;
-}
-
-#search-container,
-#conversation-list,
-#new-message-container {
-    background: #000000d5;
-}
-
-#search-container {
-    display: grid;
-    /*arama kutusu ayarı*/
-    align-items: center;
-    padding: 0 20px;
-    grid-area: search-container;
-    border-radius: 20px 0 0 0;
-    box-shadow: 0 1px 3px -1px rgba(0, 0, 0, 0.75);
-    z-index: 1;
-}
-
-#conversation-list {
-    grid-area: conversation-list;
-}
-
-#new-message-container {
-    display: grid;
-    grid: 40px /40px;
-    align-content: center;
-    grid-area: new-message-container;
-    border-top: 1px solid rgba(0, 0, 0, 0.25);
-    border-radius: 0 0 0 20px;
-    padding: 0 15px;
-}
-
-#chat-title,
-#chat-form {
-    background: #eeeeee;
-}
-
-#chat-title {
-    display: grid;
-    grid: 36px / 1fr 36px;
-    align-content: center;
-    align-items: center;
-    /*yazıyı ortalar */
-    grid-area: chat-title;
-    color: #000000;
-    font-weight: bold;
-    font-size: 1.3rem;
-    border-radius: 0 20px 0 0;
-    box-shadow: 0 1px 3px -1px rgba(0, 0, 0, 0.75);
-    padding: 0 20px;
-    /*yazıyı 20 px önden başaltır.*/
-}
-
-#chat-title>img {
-    cursor: pointer;
-}
-
-#chat-message-list {
-    grid-area: chat-message-list;
-    display: flex;
-    flex-direction: column-reverse;
-    padding: 0 20px;
-}
-
-.message-row {
-    display: grid;
-    grid-template-columns: 70%;
-    margin-bottom: 20px;
-}
-
-.message-text {
-    /*mesaj*/
-    padding: 9px 14px;
-    font-size: 1.0rem;
-    margin: 5px;
-}
-
-.message-time {
-    /*mesaj zamanı*/
-    font-size: 0.8rem;
-    color: #777;
-}
-
-#chat-form {
-    display: grid;
-    align-items: center;
-    grid-row: 15px;
-    grid-area: chat-form;
-    border-radius: 0 0 20px 0;
-    border-top: 3px solid rgba(0, 0, 0, 0.25);
-    padding-left: 68px;
-    padding-right: 22px;
-}
-
-#chat-form input {
-    outline: none;
-    padding: 20px;
-    border: 4px solid #ddd;
-    color: #330;
-    border-radius: 30px;
-    font-size: 0.8rem;
 }
 
 #main-section {
@@ -157,7 +31,7 @@ body {
     padding-left: 1em;
     padding-top: 3em;
     padding-right: 1em;
-    border-right: 0.5px solid #898c91;
+    border-right: 0.5px solid #000000;
 }
 
 #sidebar p {
@@ -235,18 +109,14 @@ input[type=text]:focus {
 }
 
 .others-msg {
-    /*karşı tarafın mesajı*/
-    justify-items: start;
-    background: #eee;
-    color: #111;
-    border: 1px solid #dddddd;
-    border-radius: 20px 20px 20px 0;
     margin-right: 7em;
     margin-left: 1em;
     padding: 0.5em 0.5em 0.5em 1em;
+    border-radius: 5px;
     border-color: grey;
     border-width: 0.5px;
     border-style: solid;
+    background-color: #C2DBFB;
     /* animation */
     animation-name: fadeIn;
     animation-duration: 0.75s;
@@ -255,16 +125,11 @@ input[type=text]:focus {
 }
 
 .my-msg {
-    justify-items: end;
-    justify-content: end;
-    /*senin mesajın*/
-    background: #0048AA;
-    color: #eeeeee;
-    border: 1px solid #0048AA;
-    border-radius: 20px 20px 0 20px;
     margin-left: 7em;
     margin-right: 1em;
     padding: 0.5em 0.5em 0.5em 1em;
+    border-radius: 5px;
+    border-color: #206ED2;
     border-width: 1px;
     border-style: solid;
     /* animation */
