--- a/templates/chat.html
+++ b/templates/chat.html
@@ -4,9 +4,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-        <title>Chat Away - RChat</title>
 
+        <title>Chat Away - RChat</title>
+        <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
         <!-- Bootstrap -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -22,14 +22,16 @@
             {% endif %}
         {% endwith %}
 
-        <div class="chat-container">
+        <div class="wrapper">
 
             <!-- Nav bar start -->
             <nav class="navbar navbar-expand-sm navbar-light fixed-top" style="background-color: #66a1ee">
 
-             <div id="search-container">  
-                <h2>Rooms</h2>
-            </div> 
+                <div class="container-fluid">
+                    <div id="show-sidebar-button" class="cursor-pointer">
+                        <i class="fas fa-plus-circle "></i>
+                        <span>Rooms</span>
+                    </div>
 
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -49,7 +51,7 @@
             <div id="main-section">
 
                 <!-- Sidebar start -->
-                <nav id="conversation-list">
+                <nav id="sidebar">
                     <h4>Rooms</h4>
                     {% for room in rooms %}
                         <p id="{{ room|title }}" class="select-room cursor-pointer">{{ room|title }}</p>
