--- a/static/styles/chat.css
+++ b/static/styles/chat.css
@@ -5,16 +5,7 @@ html {
 
 .wrapper {
     /*mesaj kutusu tasarım ayarları*/
-    display: grid;
-    min-width: 800px;
-    max-width: 1000px;
-    max-height: 800px;
-    width: 100%;
-    height: 95vh;
-    background: white;
-    /*sağdan sola  renk açışı*/
-    border-radius: 20px;
-    opacity: 90%;
+    display: flex;
 }
 
 #main-section {
