--- a/static/styles/chat.css
+++ b/static/styles/chat.css
@@ -1,5 +1,5 @@
 html {
-    background: url('../static/styles/b.jpg');
+    background: url('//static/styles/b.jpg');
     font-family: 'Patrick Hand', cursive;
 }
 
