--- a/static/styles/chat_style.css
+++ b/static/styles/chat_style.css
@@ -3,7 +3,7 @@ body {
     height: 95vh;
     /*sağdan sola  renk açışı*/
     border-radius: 20px;
-    background: url('../styles/b.jpg');
+    background: url('//styles/b.jpg');
     opacity: 0.8;
 }
 
