--- a/templates/chat.html
+++ b/templates/chat.html
@@ -34,7 +34,9 @@
             <!-- input message -->
             <div id="input-area">
                 <input type="text" id="user_message" placeholder="Type here..." autocomplete="off">
+                <div class="input-group-append">
                 <button type="button" id="send_message">SEND</button>
+                </div>
             </div>
         </div>
     </div>
