--- a/static/styles/chat_style.css
+++ b/static/styles/chat_style.css
@@ -107,7 +107,7 @@ input[type=text]:focus {
     margin-left: 1em;
     padding: 0.5em 0.5em 0.5em 1em;
     border-radius: 5px;
-    border-color: grey;
+    border-color: #ffffff;
     border-width: 0.5px;
     border-style: solid;
     background-color: #C2DBFB;
@@ -131,12 +131,12 @@ input[type=text]:focus {
     margin-right: 7em;
     margin-left: 1em;
     padding: 0.5em 0.5em 0.5em 1em;
-    color: #656d78;
+    color: #ffffff;
     font-size: 0.9em;
 }
 
 .timestamp {
-    color: #656d78;
+    color: #ffffff;
     font-size: 0.7em;
 }
 
