--- a/static/styles/chat_style.css
+++ b/static/styles/chat_style.css
@@ -1,52 +1,36 @@
-body {
-    width: 80%;
-    height: 95vh;
-    /*sağdan sola  renk açışı*/
-    border-radius: 20px;
-    background: url('//styles/b.jpg');
-}
 
 .wrapper {
     display: flex;
-    background: white;
-    opacity: 0.8;
-    width: 70%;
-    height: 50%;
 }
 
 #main-section {
-    overflow: hidden;
-    /* Makee this div contain its floated children */
+    overflow: hidden; /* Makee this div contain its floated children */
     width: 100%;
 }
 
 #sidebar {
     margin-top: 2em;
-    float: left;
-    /* Make this div as wide as its contents */
+    float: left; /* Make this div as wide as its contents */
     min-height: 96vh;
     padding-left: 1em;
     padding-top: 3em;
-    padding-right: 1em;
+    padding-right:1em;
     border-right: 0.5px solid #898c91;
 }
 
 #sidebar p {
     padding-left: 2em;
-    padding-right: 2em;
+    padding-right:2em;
 }
 
 #sidebar p:hover {
     background-color: #ffc107;
 }
 
-#sidebar h4 {
-    padding-left: 0.5em;
-}
+#sidebar h4 {padding-left: 0.5em;}
 
-#sidebar.view-sidebar {
-    display: none;
-}
+
+#sidebar.view-sidebar {display: none;}
 
 #show-sidebar-button {
     visibility: hidden;
@@ -59,30 +43,31 @@ body {
     #sidebar {
         display: none;
     }
+
     #sidebar.view-sidebar {
         display: block;
     }
+
     #show-sidebar-button {
         visibility: visible;
         opacity: 1;
     }
 }
 
+
 .cursor-pointer {
     cursor: pointer;
 }
 
 #rightside-pannel {
-    overflow: hidden;
-    /* Make this div take up the rest of the horizontal space, and no more */
+    overflow: hidden; /* Make this div take up the rest of the horizontal space, and no more */
 }
 
 #display-message-section {
     margin-top: 5em;
     min-height: 82vh;
     max-height: 82vh;
-    overflow-y: auto;
-    /*Make  this section scrolable */
+    overflow-y: auto; /*Make  this section scrolable */
 }
 
 #input-area {
@@ -91,59 +76,58 @@ body {
     bottom: 0;
 }
 
-input[type=text]:focus {
+input[type=text]:focus{
     border-color: #ffc107;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 10px #ffc107;
 }
 
 @keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
+  0% {opacity: 0;}
+  100% {opacity: 1;}
 }
 
 .others-msg {
-    margin-right: 7em;
+    margin-right:7em;
     margin-left: 1em;
     padding: 0.5em 0.5em 0.5em 1em;
     border-radius: 5px;
-    border-color: #ffffff;
-    font-palette: light;
+    border-color: grey;
     border-width: 0.5px;
     border-style: solid;
     background-color: #C2DBFB;
     /* animation */
-
+    animation-name: fadeIn;
+    animation-duration: 0.75s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-in-out;
 }
 
 .my-msg {
-    margin-left: 7em;
-    margin-right: 1em;
+    margin-left:7em;
+    margin-right:1em;
     padding: 0.5em 0.5em 0.5em 1em;
     border-radius: 5px;
     border-color: #206ED2;
     border-width: 1px;
-    font-palette: light;
     border-style: solid;
     /* animation */
-
+    animation-name: fadeIn;
+    animation-duration: 0.75s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-in-out;
 }
 
 .system-msg {
-    margin-right: 7em;
+    margin-right:7em;
     margin-left: 1em;
-    font-palette: light;
     padding: 0.5em 0.5em 0.5em 1em;
-    color: #ffffff;
-    font-size: 0.9em;
+    color: #656d78;
+    font-size:0.9em;
 }
 
 .timestamp {
-    color: #ffffff;
-    font-size: 0.7em;
+    color: #656d78;
+    font-size:0.7em;
 }
 
 .other-username {
@@ -164,5 +148,5 @@ input[type=text]:focus {
 }
 
 #get-username {
-    display: block !important;
+    display: none !important;
 }
