--- a/templates/prelogin-layout.html
+++ b/templates/prelogin-layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %} - flaskypy</title>
+    <title>{% block title %}{% endblock %} - Flaskypy</title>
 </head>
 <body>
     <!-- Flash messages -->
