--- a/templates/chat.html
+++ b/templates/chat.html
@@ -92,8 +92,9 @@
         <!-- Custom chat JS -->
         <script src="{{ url_for('static', filename='scripts/chat_page.js') }}"></script>
 
-        <!-- SocketIO JS socket.io.min.js-->
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+        <!-- SocketIO JS socket.io.min.js .min.js değiştirildi-->
+
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.js"></script>
 
         <!-- Custom SocketIO JS -->
         <script src="{{ url_for('static', filename='scripts/socketio.js') }}"></script>
