--- a/templates/chat.html
+++ b/templates/chat.html
@@ -24,6 +24,8 @@
                 <p class=formError>{{ messages[0] }}</p>
             {% endif %}
         {% endwith %}
+        <center>
+
 
         <div class="wrapper">
 
@@ -106,6 +108,6 @@
         <!-- Font Awesome JS -->
         <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
-
+     </center>
     </body>
 </html>
