--- a/templates/chat.html
+++ b/templates/chat.html
@@ -30,7 +30,7 @@
         <div class="wrapper">
 
             <!-- Nav bar start -->
-            <nav class="navbar navbar-expand-sm navbar-light fixed-top" style="background-color: #66a1ee">
+            <nav class="navbar navbar-expand-sm navbar-light fixed-top" style="background-color: #000000">
 
                 <div class="container-fluid">
                     <div id="show-sidebar-button" class="cursor-pointer">
@@ -44,7 +44,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a id="logout-btn" class="nav-link" href="{{ url_for('logout') }}"><span style="color: #335177">Logout</span></a>
+                                <a id="logout-btn" class="nav-link" href="{{ url_for('logout') }}"><span style="color: #ffffff">Logout</span></a>
                             </li>
                         </ul>
                     </div>
