--- a/static/styles/chat_style.css
+++ b/static/styles/chat_style.css
@@ -1,9 +1,11 @@
-
+body{
+    background: url("../styles/b.jpg");
+}
 .wrapper {
     display: flex;
     width: 80%;
     height: 95vh;
-    background: url("../styles/b.jpg");
+
 }
 
 #main-section {
