--- a/templates/chat.html
+++ b/templates/chat.html
@@ -7,11 +7,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <title>Chat Away - Flaskypy</title>
-            <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
         <style>
 body {
     background-image: url("../static/styles/b.jpg");
-    font-family: 'Caveat', cursive;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 </style>
