--- a/templates/chat.html
+++ b/templates/chat.html
@@ -16,14 +16,13 @@ body {
 
 .wrapper {
     display: flex;
-    width: 80%;
-    height: 95vh;
+    width: 100%;
 
 }
 
 #main-section {
     overflow: hidden; /* Makee this div contain its floated children */
-    width: 80%;
+    width: 100%;
 }
 
 #sidebar {
@@ -43,7 +42,7 @@ body {
 
 #sidebar p:hover {
 
-    background-color: #282828;
+    background-color: #ffffff;
 }
 
 #sidebar h4 {padding-left: 0.5em;}
@@ -108,15 +107,14 @@ input[type=text]:focus{
 
 .others-msg {
     opacity: 50%;
-    justify-items: start;
-    margin-right:4em;
-    margin-left: 4em;
+    margin-right:7em;
+    margin-left: 1em;
     padding: 0.5em 0.5em 0.5em 1em;
     border-radius: 10px;
     border-color: grey;
     border-width: 0.5px;
     border-style: solid;
-    background-color: #797979;
+    background-color: #3394e0;
     /* animation */
     animation-name: fadeIn;
     animation-duration: 0.75s;
@@ -125,11 +123,10 @@ input[type=text]:focus{
 }
 
 .my-msg {
-    opacity: 0.8%;
+    opacity: 80%;
     background: white;
-    justify-items: end;
-    margin-left:4em;
-    margin-right:4em;
+    margin-left:7em;
+    margin-right:1em;
     padding: 0.5em 0.5em 0.5em 1em;
     border-radius: 10px;
     border-color: #282828;
@@ -146,19 +143,19 @@ input[type=text]:focus{
     margin-right:7em;
     margin-left: 1em;
     padding: 0.5em 0.5em 0.5em 1em;
-    color: #656d78;
+    color: #ffffff;
     font-size:0.9em;
 }
 
 .timestamp {
-    color: #656d78;
+    color: #505761;
     font-size:0.7em;
 }
 
 .other-username {
     font-weight: bold;
     font-size: 1.1em;
-    color: #206ED2;
+    color: #975604;
 }
 
 .my-username {
