--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,9 @@
 <html>
 <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/login.css') }}">
-
+<div class="title">
+    <h1>FLASKYPY</h1>
+</div>
 <div class="outer-box">
     <div class="login-box">
         <h2 class="login-text">Login now!</h2>
