--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -70,10 +70,15 @@ small {
     border-radius: 10%;
     border: 3px solid rgb(0, 0, 0);
 }
-
+.title{
+    margin:auto;
+    font-size: xx-large;
+    margin-top: 130px;
+}
 .outer-box {
     display: block;
     margin: auto;
+    margin-top: 50px;
     background: #242627;
     border-radius: 10%;
     width: 30%;
@@ -89,7 +94,7 @@ small {
     height: 20px;
     margin-top: 2.0em;
     border-radius: 4px;
-    background-color: #0d2663;
+    background-color: #ffc800;
     color: #fff;
     border-radius: 20%;
     outline: none;
@@ -97,4 +102,7 @@ small {
     border: 4px solid rgb(0, 0, 0);
     border-radius: 30px;
     opacity: 100%;
+}
+a{
+  color: #00d7ff;
 }
