--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,9 @@
 <html>
 <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/login.css') }}">
-
+<div class="title">
+    <h1>FLASKYPY</h1>
+</div>
 <div class="outer-box">
     <div class="login-box">
         <h3 class="login-text">Get started!</h3>
