--- a/static/styles/chat_style.css
+++ b/static/styles/chat_style.css
@@ -149,7 +149,7 @@ input[type=text]:focus{
 .other-username {
     font-weight: bold;
     font-size: 1.1em;
-    color: #ff9304;
+    color: #720303;
 }
 
 .my-username {
